# 3DViewer_v1.0

./: README.md  README_RUS.md
src/: Makefile  README.md
src/3dview/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  status.cpp  status.h  status.ui
src/3dview/QtGifImage/src/gifimage/: qgifimage.cpp  qgifimage_p.h
src/s21_core/: s21_core_viewer.h  s21_equal.c  s21_extra.c  s21_manage_mat.c  s21_matrix.h  s21_mult_matrix.c  s21_obj.c  s21_obj.h  s21_parser.c  s21_parser.h  s21_tranponse.c  s21_transformations.c  s21_transformations.h
src/tests/: s21_tests.h  test.c  test_parser.c  test_transforms.c
